--- a/styles/navigation_style.css
+++ b/styles/navigation_style.css
@@ -65,5 +65,5 @@ img.icons {
     box-shadow: 
     black 2px 2px 1px 0px inset, 
     rgba(255, 255, 255, 0.5) -3px -3px 1px 1px inset;
-    transform: scale(0.97);
+    transform: scale(0.9);
 }
