--- a/styles/videos_style.css
+++ b/styles/videos_style.css
@@ -25,7 +25,7 @@
 .videos:hover {
     transition: all .2s;
     transition-delay: 1.1s;
-    transform: scale(1.15);
+    transform: scale(1.3);
 }
 
 /* Styles for all video tags */
